--- a/index.html
+++ b/index.html
@@ -7,6 +7,10 @@
     <div>
         <div id="result">Replace Me</div>
     </div>
+
+    <!--Silly gif-->
+    <img src="https://media1.tenor.com/m/5BYK-WS0__gAAAAd/cool-fun.gif" alt="Uh oh!">
+
     <script src="index.js"></script>
 </body>
 </html>
